--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\CHMAHONE\\AppData\\Local\\Continuum\\anaconda3\\python.exe",
+    "python.pythonPath": "C:\\Users\\CHMAHONE\\.virtualenvs\\BeerPrediction-QB__piRt\\Scripts\\python.exe",
     "git.postCommitCommand": "sync"
 }
