--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,8 @@ pandas-profiling = "*"
 torch = {file = "https://download.pytorch.org/whl/cu101/torch-1.7.1%2Bcu101-cp37-cp37m-win_amd64.whl"}
 matplotlib = "*"
 varname = "*"
+fastapi = "*"
+uvicorn = {extras = ["standard"], version = "*"}
 
 [dev-packages]
 
