--- a/Pipfile
+++ b/Pipfile
@@ -6,13 +6,13 @@ name = "pypi"
 [packages]
 sklearn = "*"
 numpy = "*"
-pandas = "*"
+# pandas = "*"
 joblib = "*"
 scipy = "*"
-pandas-profiling = "*"
+# pandas-profiling = "*"
 # torch = {file = "https://download.pytorch.org/whl/cu101/torch-1.7.1%2Bcu101-cp37-cp37m-win_amd64.whl"}
-matplotlib = "*"
-varname = "*"
+# matplotlib = "*"
+# varname = "*"
 fastapi = "*"
 uvicorn = {extras = ["standard"], version = "*"}
 torchsummary = "*"
